atualizei as funcionalidades de verificação de campo

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -71,14 +71,6 @@
                 </div>
             </section>
 
-            <!-- CAMPO TEXTO: CONFIRMAÇÃO DE EMAIL -->
-            <section>
-                <div class="col-md-12">
-                    <label for="confirmar" class="mb-2">Confirmação de E-mail</label>
-                    <input type="text" name="confirmar" id="confirmar" class="form-control" disabled>
-                </div>
-            </section>
-
             <!-- CAMPO PASSWORD: SENHA -->
             <!-- input-group agrupar  -->
             <!-- col-form-label  informa que não será botão-->
@@ -109,17 +101,7 @@
                     <input type="radio" name="escolaridade" id="superior" value="superior" class="form-check-input">
                     <label for="superior" class="form-check-label">Superior</label>
                 </div>
-
-            </section>
-
-                <div class="col-md-6 mx-auto mb-2">
-                <button class="btn btn-primary col-12">Verificar Escolaridade</button>
-                </div>
   
-              <!-- CAMPO SWITCH: TERMOS DE CONTRATO -->
-              <div class="alert alert-warning mt-2">
-                <p class="m-0 py-2">Você aceita os termos do contrato?</p>
-              </div>
   
               <section class="form-check form-switch">
                 <input type="checkbox" name="escolha" id="escolha" value="escolha" class="form-check-input">
@@ -168,18 +150,12 @@
               <!-- CAMPO TEXTAREA: COMENTÁRIO -->
               <section class="row mb-2"> 
                 <div class="col-md-12">
-                  <label for="mensagem" class="mb-2">Comente sobre o setor escolhido</label>
-                  <textarea name="mensagem" id="mensagem" placeholder="Descreva brevemente sua opinião" class="form-control"></textarea>
+                  <label for="mensagem" class="mb-2">porque voce quer trabalhar nesse setor?</label>
+                  <textarea name="mensagem" id="mensagem" placeholder="Descreva aqui" class="form-control"></textarea>
                 </div>
               </section>
   
-              <!-- CAMPO DE COR -->
-  
-              <section class="row mb-2">
-                <label for="cor" class="col-md-3">Escolha uma para o site</label>
-                <input type="color" name="cor" id="cor" class="col-md-9 p-0">
-              </section>
-  
+             
               <div class="col-md-6 mx-auto my-5">
               <button type="submit" class="btn btn-primary col-12">Enviar Formulário</button>
               </div>
