atualizaçao do formulario inteiro

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Evento anual de marketing</title>
+    <title>marketing Now</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Marketing Digital</a>
+      <a class="navbar-brand" href="#">Marketing Now</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,15 +26,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="pages/cadastro.html">Cadastro</a>
+            <a class="nav-link" href="pages/trabalhe_conosco.html">trabalhe conosco</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lista de Usuários</a>
-          </li>
-        </ul>
-      </div>
-    </div>
 </nav>
     <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
