adicionei um diretorio estatico e estou implementando o ecebmneto dos dados.

--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -35,7 +35,8 @@
 
     <main class="container bg-secondary-subtle">
         <h1 class="text-center my-5">Formulário de Cadastro</h1>
-        <form action="#">
+        
+        <form action="http://127.0.0.1:8000/submit" method="post">
             <!-- CAMPO DE TEXTO: NOME -->
             <section class="row mb-2">
                 <div class="col-md-12">
