--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>marketing Now</title>
+    <title>Obra Atacarejo</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark sticky-top" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Marketing Now</a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="pages/trabalhe_conosco.html">trabalhe conosco</a>
-          </li>
-
-</nav>
+  <nav class="navbar navbar-expand-sm sticky-top" style="background-color: yellow;" data-bs-theme="dark">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="#">Obratec trabalhe conosco</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="../">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" href="#">Formulario</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+</body>
     <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -38,21 +38,6 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-
-        <div class="carousel-inner">
-          <div class="carousel-item active bloco">
-            <img src="assets/imagens/slide1.jpg" class="d-block w-100" alt="reunião grupo">
-          </div>
-
-          <div class="carousel-item bloco">
-            <img src="assets/imagens/slide2.webp" class="d-block w-100" alt="palestra">
-          </div>
-
-          <div class="carousel-item bloco">
-            <img src="assets/imagens/slide3.jpg" class="d-block w-100" alt="apresetação">
-          </div>
-
         </div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
