--- a/pages/index.html
+++ b/pages/index.html
@@ -11,24 +11,26 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-sm sticky-top text-shadow" style="background-color: rgb(240, 218, 18);">
-    <div class="container-fluid">
-      <a class="navbar-brand text-dark" href="/index">Obratec Atacarejo da Construção</a>
+<nav class="navbar navbar-expand-sm sticky-top navbar-yellow text-shadow">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="">
+          <img src="static/assets/imagens/blocos/logo.jpg" alt="Obratec Atacarejo da Construção" style="height: 40px; padding: 5px; border-radius: 5px; background-color: rgba(255, 255, 255, 0.5);">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/index">Início</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/trabalhe_conosco">Formulário para cadastro</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link text-dark <?php if($page == 'home') echo 'disabled'; ?>" href="/index">Início</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-dark" href="/trabalhe_conosco">Formulário para cadastro</a>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -99,18 +101,15 @@
     <hr class="my-5">
   </main>
 
-  <footer class="container-fluid footer-yellow py-3" style="background-color: rgb(240, 218, 18)">
-    <section class="row d-flex justify-content-start align-items-center">
+ <!-- Footer -->
+<footer class="container-fluid footer-yellow py-3">
+  <section class="row d-flex justify-content-start align-items-center">
       <div class="col-md-12 d-flex align-items-center">
-        <p class="mb-0 me-3">&copy;2024 Obratec Atacarejo da Construção</p>
-        <div class="fs-5 social">
-          <a href="#" class="me-2"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        </div>
+          <p class="mb-0 me-3">&copy;2024 Obratec Atacarejo da Construção</p>
+          <div class="fs-5 social">
+              <a href="#" class="me-2"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </div>
       </div>
-    </section>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+  </section>
+</footer>
