--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -7,38 +7,53 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>Trabalhe na Obratec</title>
+    <title>Trabalhe Conosco</title>
     <style>
         .custom-navbar {
-            background-color: rgba(240, 218, 18); /* Cor de fundo */
+            background-color: #ffff00; /* Cor de fundo */
             padding-top: 10px; /* Ajuste conforme necessário */
             padding-bottom: 10px; /* Ajuste conforme necessário */
         }
         .footer-yellow {
             background-color: rgb(240, 218, 18); /* Cor de fundo do footer */
         }
+        .navbar-brand img {
+            height: 40px; /* Ajuste a altura conforme necessário */
+            padding: 5px;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.5); /* Fundo branco semitransparente para o logo */
+        }
+        .social a {
+            color: inherit; /* Mantém a cor original */
+            text-decoration: none; /* Remove o sublinhado */
+        }
+        .social a:hover {
+            color: #00000080; /* Cor desejada no hover */
+        }
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm custom-navbar sticky-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Obratec Trabalhe Conosco</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../">inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Formulário</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-sm custom-navbar sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="pages/index.html">
+                <img src="static/assets/imagens/blocos/logo.jpg" alt="logo obratec">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/index">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Formulário</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-  </nav>
-
+    </nav>
+    
     <main class="container bg-secondary-subtle">
         <h1 class="text-center my-5">Formulário de Cadastro</h1>
         
@@ -161,4 +176,11 @@
             </div>
         </form>
     </main>
-    <footer class="container
+    <footer class="container footer-yellow">
+        <!-- Conteúdo do rodapé -->
+        <p class="text-center py-3">© 2024 Obratec. Todos os direitos reservados.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/script.js"></script>
+</body>
+</html>
