--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                  <a class="nav-link text-dark <?php if($page == 'home') echo 'disabled'; ?>" href="/index">Início</a>
+                  <a class="nav-link text-dark <?php if($page == 'home') echo 'disabled'; ?>" href="">Início</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link text-dark" href="/trabalhe_conosco">Formulário para cadastro</a>
