--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -35,7 +35,7 @@
 <body>
     <nav class="navbar navbar-expand-sm custom-navbar sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="pages/index.html">
+            <a class="navbar-brand" href="">
                 <img src="static/assets/imagens/blocos/logo.jpg" alt="logo obratec">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
