--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -170,17 +170,15 @@
                     <textarea name="mensagem" id="mensagem" placeholder="Descreva aqui" class="form-control"></textarea>
                 </div>
             </section>
-            
             <div class="col-md-6 mx-auto my-5">
-                <button type="submit" class="btn btn-primary col-12">Enviar Formulário</button>
+                <button type="submit" class="btn btn-warning col-12">Enviar Formulário</button>
             </div>
         </form>
     </main>
-    <footer class="container footer-yellow">
+    <footer class="col-md-6 mx-auto my-5 container footer-yellow">
         <!-- Conteúdo do rodapé -->
         <p class="text-center py-3">© 2024 Obratec. Todos os direitos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/script.js"></script>
 </body>
 </html>
