adicionei novos campos.

--- a/pages/index.html
+++ b/pages/index.html
@@ -76,7 +76,7 @@
       <section class="row d-flex align-items-center">
         <div class="col-md-7">
           <h1>Venha trabalhar conosco e vamos chegar mais longe juntos.</h1>
-          <h3>Envie agora o seu currículo e venha trabalhar no maior atacarejo do Nordeste</h3>
+          <h3>Envie agora o seu currículo e venha trabalhar no maior atacarejo de materias de contrução do Nordeste.</h3>
           <p class="lead">O nosso processo seletivo é cuidadoso visando buscar o que há de melhor nos candidatos.</p>
         </div>
         <div class="col-md-5">
@@ -105,11 +105,7 @@
 <footer class="container-fluid footer-yellow py-3">
   <section class="row d-flex justify-content-start align-items-center">
       <div class="col-md-12 d-flex align-items-center">
-          <p class="mb-0 me-3">&copy;2024 Obratec Atacarejo da Construção</p>
-          <div class="fs-5 social">
-              <a href="#" class="me-2"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          </div>
+          
       </div>
   </section>
 </footer>
