--- a/pages/index.html
+++ b/pages/index.html
@@ -100,12 +100,5 @@
 
     <hr class="my-5">
   </main>
-
- <!-- Footer -->
-<footer class="container-fluid footer-yellow py-3">
-  <section class="row d-flex justify-content-start align-items-center">
-      <div class="col-md-12 d-flex align-items-center">
-          
-      </div>
-  </section>
+  <footer class="footer-yellow">
 </footer>
