--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -110,9 +110,9 @@
                     <label for="superior" class="form-check-label">Superior Cursando</label>
                 </div>
 
-                <div class="form-check">
+                <div class="form-check"></div>
                     <input type="radio" name="escolaridade" id="superiorcompleto" value="superiorcompleto" class="form-check-input">
-                    <label for="superiorcompleto" class="form-check-label">Superior completo</label>
+                    <label for="superiorcompleto" class="form-check-label">Superiorcompleto</label>
                 </div>
             </section>
 
