adicionei a opção de enviar um arquivo .pd ou .docx e melhorei a interatividade com javascript

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
                   <a class="nav-link text-dark <?php if($page == 'home') echo 'disabled'; ?>" href="">Início</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link text-dark" href="/trabalhe_conosco">Formulário para cadastro</a>
+                  <a class="nav-link text-dark" href="trabalhe_conosco.html">Formulário para cadastro</a>
               </li>
           </ul>
       </div>
