mudei os caminhos de acesso das paginas na API

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-sm sticky-top navbar-yellow text-shadow">
   <div class="container-fluid">
       <a class="navbar-brand" href="">
-          <img src="static/assets/imagens/blocos/logo.jpg" alt="Obratec Atacarejo da Construção" style="height: 40px; padding: 5px; border-radius: 5px; background-color: rgba(255, 255, 255, 0.5);">
+          <img src="static/assets/imagens/blocos/logo.jpg" alt="Obratec Atacarejo da Construção" class="logo-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                  <a class="nav-link text-dark <?php if($page == 'home') echo 'disabled'; ?>" href="">Início</a>
+                  <a class="nav-link nav-link-home" href="index.html">Início</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link text-dark" href="trabalhe_conosco.html">Formulário para cadastro</a>
+                  <a class="nav-link nav-link-form" href="trabalhe_conosco.html">Formulário para cadastro</a>
               </li>
           </ul>
       </div>
