--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -61,7 +61,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-dark font-weight-bold" aria-current="page" href="index.html">Início</a>
+                        <a class="nav-link text-dark font-weight-bold" aria-current="page" href="/">Início</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark font-weight-bold" href="trabalhe_conosco.html">Formulário para cadastro</a>
