--- a/pages/index.html
+++ b/pages/index.html
@@ -22,11 +22,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                  <a class="nav-link nav-link-home" href="index.html">Início</a>
+                  <a class="nav-link text-dark font-weight-bold" href="index.html">Início</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link nav-link-form" href="trabalhe_conosco.html">Formulário para cadastro</a>
-              </li>
+                <a class="nav-link text-dark font-weight-bold" href="trabalhe_conosco.html">Formulário para cadastro</a>
+            </li>
           </ul>
       </div>
   </div>
