--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/static/css/style.css">
     <title>Obratec Atacarejo</title>
 </head>
@@ -32,15 +33,34 @@
   </div>
 </nav>
 
-  <header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<header></header>
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-    </div>
-  </header>
+      <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="/static/assets/imagens/blocos/obratec_colaboradores01.jpg" class="d-block w-100" alt="Colaboradores 1">
+          </div>
+          <div class="carousel-item">
+              <img src="/static/assets/imagens/blocos/obratec_colaboradores02.jpg" class="d-block w-100" alt="Colaboradores 2">
+          </div>
+          <div class="carousel-item">
+              <img src="/static/assets/imagens/blocos/obratec_colaboradores03.jpg" class="d-block w-100" alt="Colaboradores 3">
+          </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+      </a>
+  </div>
+</header>
 
   <main class="container-fluid bg-light">
     <!-- Perfis dos Palestrantes -->
