--- a/pages/index.html
+++ b/pages/index.html
@@ -70,21 +70,21 @@
           <img src="/static/assets/perfil/vinicius.jpeg" alt="foto Vinicius Moura" class="rounded-circle img-thumbnail w-200">
           <h2 class="fw-normal">Vinicius Moura</h2>
           <p>Assistente de TI</p>
-          <p>Aqui na Obratec eu pude me desenvolver e também contribuir com o desenvolvimento da empresa</p>
+          <p>Aqui na Obratec eu pude me desenvolver e Crescer profissionalmente.</p>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-3">
           <img src="/static/assets/perfil/mariana.jpg" alt="foto Mariana Araujo" class="rounded-circle img-thumbnail w-200">
           <h2 class="fw-normal">Mariana Araujo</h2>
           <p>Analista de Sistemas</p>
-          <p>Aqui na Obratec o colaborador é valorizado e tem oportunidades de crescimento</p>
+          <p>Aqui na Obratec o colaborador é valorizado e tem oportunidades de crescimento.</p>
         </div>
         
         <div class="col-lg-4 col-md-6 d-flex flex-column justify-content-between align-items-center mb-3">
           <img src="/static/assets/perfil/wanderleia.jpeg" alt="foto Wanderleia" class="rounded-circle img-thumbnail w-200">
           <h2 class="fw-normal">Wanderleia Santos</h2>
           <p>Supervisora Comercial</p>
-          <p>Aqui na Obratec eu sou valorizada</p>
+          <p>Aqui na Obratec eu sou valorizada pelas minhas habilidades.</p>
         </div>
       </div>
     </section>
