atualizei a formatação do contrato

--- a/pages/trabalhe_conosco.html
+++ b/pages/trabalhe_conosco.html
@@ -154,6 +154,11 @@
                     <input type="radio" name="escolaridade" id="superiorcompleto" value="superiorcompleto" class="form-check-input">
                     <label for="superiorcompleto" class="form-check-label">Superiorcompleto</label>
                 </div>
+
+                <div class="form-check">
+                    <input type="radio" name="escolaridade" id="pos_graduacao" value="pos_graduacao" class="form-check-input">
+                    <label for="pos_graduacao" class="form-check-label">Pos-graduação</label>
+                </div>
             </section>
             <!-- CAMPO PARA O CANDIDATO ESPECIFICA SE POSSUI OU NÃO EXPERINCIA NA FUNÇÃO-->
             <section class="row mb-2 ps-3"></section>
@@ -257,39 +262,40 @@
                     <p class="lead">
                         CONTRATO DE CONSENTIMENTO PARA ARMAZENAMENTO E TRATAMENTO DE DADOS PESSOAIS
 
-                        1. OBJETO
+                        <p>1. OBJETO
 
                         1.1 A EMPRESA conduzirá um processo seletivo para vagas de emprego.
 
                         1.2 O CANDIDATO concorda em fornecer à EMPRESA informações e dados pessoais necessários para avaliação e consideração no processo seletivo.
 
-                        2. AUTORIZAÇÃO DE USO DE DADOS
+                        <p>2. AUTORIZAÇÃO DE USO DE DADOS
 
                         2.1 O CANDIDATO autoriza a EMPRESA a coletar, armazenar e utilizar os dados fornecidos para fins de avaliação de qualificações e consideração no processo seletivo.
 
                         2.2 Os dados fornecidos pelo CANDIDATO incluem, mas não se limitam a, nome, endereço, número de telefone, endereço de e-mail, histórico acadêmico, experiência profissional, habilidades e outras informações relevantes para o processo seletivo.
-
-                        3. CONFIDENCIALIDADE E SEGURANÇA
+                            </p>
+                        <p>3. CONFIDENCIALIDADE E SEGURANÇA
 
                         3.1 A EMPRESA compromete-se a tratar todas as informações fornecidas pelo CANDIDATO de forma confidencial e a adotar medidas adequadas para proteger esses dados contra acessos não autorizados, vazamentos ou qualquer forma de tratamento inadequado.
 
                         3.2 Os dados do CANDIDATO serão acessíveis apenas aos responsáveis pelo processo seletivo e utilizados exclusivamente para avaliação e seleção de candidatos, conforme descrito na CLÁUSULA 2.1.
-
-                        4. PERÍODO DE RETENÇÃO DE DADOS
+                         </p>
+                       <p> 4. PERÍODO DE RETENÇÃO DE DADOS
 
                         4.1 Os dados fornecidos pelo CANDIDATO serão retidos pela EMPRESA durante o período necessário para a conclusão do processo seletivo e, se aplicável, durante o tempo de contratação.
 
                         4.2 Caso o CANDIDATO seja contratado, os dados fornecidos serão mantidos e geridos de acordo com as políticas internas da EMPRESA sobre gestão de dados pessoais.
-
-                        5. DIREITOS DO CANDIDATO
+                        </p>
+                      <p> 5. DIREITOS DO CANDIDATO
 
                         5.1 O CANDIDATO tem o direito de solicitar acesso, correção ou exclusão dos seus dados pessoais a qualquer momento, entrando em contato com a EMPRESA através dos canais de comunicação disponibilizados.
-
-                        6. CONSIDERAÇÕES FINAIS
+                        </p>
+                        <p>6. CONSIDERAÇÕES FINAIS
 
                         6.1 Este contrato representa o entendimento completo entre as partes e substitui qualquer acordo ou entendimento anterior, oral ou escrito, relacionado ao objeto deste contrato.
 
                         6.2 Ao assinar este contrato, o CANDIDATO reconhece que leu e compreendeu as condições aqui estabelecidas, concordando voluntariamente em participar do processo seletivo da EMPRESA.
+                        </p>
                     </p>
                     <hr>
                     <div class="form-check">
